2014-07-22  Yuri Rumyantsev  <ysrumyan@gmail.com>

	PR tree-optimization/61822
	* gcc.dg/vect/cond-reduc-1.c: Add missed dg directive.

2014-07-22  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* gcc.target/aarch64/simd/vbsl_f64_1.c: New test.

2014-07-22  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/fuse-caller-save-xmm.c (dg-options): Use
	-msse2 -mno-avx instead of -msse.

2014-07-22  Uros Bizjak  <ubizjak@gmail.com>

	* g++.dg/ipa/imm-devirt-2.C (dg-final): Improve einline dump string.
	* gcc.dg/pr44024.c (dg-options): Add -O1.
	(dg-final): Check for the condition.
	* gcc.dg/vect/pr61680.c (dg-final): Cleanup vect tree dump.

2014-07-21  Bin Cheng  <bin.cheng@arm.com>

	PR target/55701
	* gcc.target/arm/memset-inline-1.c: New test.
	* gcc.target/arm/memset-inline-2.c: New test.
	* gcc.target/arm/memset-inline-3.c: New test.
	* gcc.target/arm/memset-inline-4.c: New test.
	* gcc.target/arm/memset-inline-5.c: New test.
	* gcc.target/arm/memset-inline-6.c: New test.
	* gcc.target/arm/memset-inline-7.c: New test.
	* gcc.target/arm/memset-inline-8.c: New test.
	* gcc.target/arm/memset-inline-9.c: New test.

2014-07-21  Tom de Vries  <tom@codesourcery.com>

	PR target/61827
	* gcc.target/i386/fuse-caller-save-rec.c: Allow underscore prefix
	to bar symbol in scan-assembler-times call check.

2014-07-21  Tom de Vries  <tom@codesourcery.com>

	PR target/61827
	* gcc.target/i386/fuse-caller-save-xmm.c: Allow LC0 without dot prefix
	for darwin in scan-assembler-times check.
	* gcc.target/i386/fuse-caller-save.c: Remove cfi-related
	scan-assembler-not checks.  Add checks for insns.
	(main): Remove.
	* gcc.target/i386/fuse-caller-save-rec.c: Remove cfi-related
	scan-assembler-not checks.  Copy checks from i386/fuse-caller-save.c.
	(main): Remove.

2014-07-21  Tom de Vries  <tom@codesourcery.com>

	PR target/61827
	* gcc.target/i386/fuse-caller-save-xmm.c: Add -fomit-frame-pointer to
	dg-options.  Add checks for insns with xmm registers.  Remove